WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297756
text-decoration-line: Refactor TextDecorationLine into strong type
https://bugs.webkit.org/show_bug.cgi?id=297756
Summary
text-decoration-line: Refactor TextDecorationLine into strong type
Vitor Roriz
Reported
2025-08-21 16:04:50 PDT
text-decoration-line: Refactor TextDecorationLine into strong type
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-08-21 16:05:00 PDT
<
rdar://problem/158897260
>
Vitor Roriz
Comment 2
2025-08-21 16:15:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49738
EWS
Comment 3
2025-08-25 17:09:44 PDT
Committed
299142@main
(b0dc25a5f71e): <
https://commits.webkit.org/299142@main
> Reviewed commits have been landed. Closing PR #49738 and removing active labels.
Diego Pino
Comment 4
2025-08-26 07:23:58 PDT
Linux build bots building with GCC12 or lower, failed with the following error: error: call to non-‘constexpr’ function ‘bool WebCore::Style::TextDecorationLine::isNone() const’ 134 | constexpr explicit operator bool() const { return !isNone(); } | ~~~~~~^~ /home/buildbot/worker/GTK-Linux-64-bit-Release-Debian-12-Build/build/WebKitBuild/GTK/Release/WebCore/PrivateHeaders/WebCore/StyleTextDecorationLine.h:71:10: note: ‘bool WebCore::Style::TextDecorationLine::isNone() const’ declared here 71 | bool isNone() const { return WTF::holdsAlternative<CSS::Keyword::None>(m_value); } | ^~~~~~
Diego Pino
Comment 5
2025-08-26 07:25:31 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/49885
EWS
Comment 6
2025-08-27 00:48:33 PDT
Committed
299190@main
(45e657c98e41): <
https://commits.webkit.org/299190@main
> Reviewed commits have been landed. Closing PR #49885 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug