[GCC] Unreviewed, fix build for Debian Stable after 299142@main https://bugs.webkit.org/show_bug.cgi?id=297756

error: call to non-‘constexpr’ function ‘bool WebCore::Style::TextDecorationLine::isNone() const

Mark function 'isNone' as well as 'holdsAlternative' as constexpr.

* Source/WTF/wtf/StdLibExtras.h:
(WTF::holdsAlternative):
* Source/WebCore/style/values/text-decoration/StyleTextDecorationLine.h:
(WebCore::Style::TextDecorationLine::isNone const):

Canonical link: https://commits.webkit.org/299190@main